@@ -4,7 +4,7 @@
  * This example shows how to make a HTTP request with the Request and Response
  * objects.
  *
- * @copyright Copyright (C) 2009-2013 fruux GmbH. All rights reserved.
+ * @copyright Copyright (C) 2009-2014 fruux GmbH. All rights reserved.
  * @author Evert Pot (http://evertpot.com/)
  * @license http://code.google.com/p/sabredav/wiki/License Modified BSD License
  */
