@@ -3,10 +3,10 @@
 // The url we're proxying to.
 $remoteUrl = 'http://example.org/';
 
-// The url we're proxying from. Please note that this must be a relative url, 
+// The url we're proxying from. Please note that this must be a relative url,
 // and basically acts as the base url.
 //
-// If youre $remoteUrl doesn't end with a slash, this one probably shouldn't 
+// If youre $remoteUrl doesn't end with a slash, this one probably shouldn't
 // either.
 $myBaseUrl = '/reverseproxy.php';
 // $myBaseUrl = '/~evert/sabre/http/examples/reverseproxy.php/';
