@@ -215,4 +215,17 @@ class RequestDecorator implements RequestInterface {
         $this->inner->setRawServerData($data);
 
     }
+
+    /**
+     * Serializes the request object as a string.
+     *
+     * This is useful for debugging purposes.
+     *
+     * @return string
+     */
+    public function __toString() {
+
+        return $this->inner->__toString();
+
+    }
 }
