@@ -82,4 +82,16 @@ class ResponseDecorator implements ResponseInterface {
 
     }
 
+    /**
+     * Serializes the request object as a string.
+     *
+     * This is useful for debugging purposes.
+     *
+     * @return string
+     */
+    public function __toString() {
+
+        return $this->inner->__toString();
+
+    }
 }
